--- a/web-client/src/app.css
+++ b/web-client/src/app.css
@@ -15,24 +15,23 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-
-  --blue-gray-50: #ECEFF1;
-  --blue-gray-100: #CFD8DC;
-  --blue-gray-200: #B0BEC5;
-  --blue-gray-300: #90A4AE;
-  --blue-gray-400: #78909C;
-  --blue-gray-500: #607D8B;
-  --blue-gray-600: #546E7A;
-  --blue-gray-700: #455A64;
-  --blue-gray-800: #37474F;
+  --blue-gray-50: #eceff1;
+  --blue-gray-100: #cfd8dc;
+  --blue-gray-200: #b0bec5;
+  --blue-gray-300: #90a4ae;
+  --blue-gray-400: #78909c;
+  --blue-gray-500: #607d8b;
+  --blue-gray-600: #546e7a;
+  --blue-gray-700: #455a64;
+  --blue-gray-800: #37474f;
   --blue-gray-900: #263238;
 
-  --gray-50: #FAFAFA;
-  --gray-100: #F5F5F5;
-  --gray-200: #EEEEEE;
-  --gray-300: #E0E0E0;
-  --gray-400: #BDBDBD;
-  --gray-500: #9E9E9E;
+  --gray-50: #fafafa;
+  --gray-100: #f5f5f5;
+  --gray-200: #eeeeee;
+  --gray-300: #e0e0e0;
+  --gray-400: #bdbdbd;
+  --gray-500: #9e9e9e;
   --gray-600: #757575;
   --gray-700: #616161;
   --gray-800: #424242;
@@ -43,7 +42,8 @@ body {
   color: white;
 }
 
-body, html {
+body,
+html {
   height: 100%;
   width: 100%;
 }
